<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <ScrollView 
         android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
   		 android:layout_weight="1">
   		 
	    <LinearLayout
	         android:layout_width="fill_parent"
	    	 android:layout_height="wrap_content"
	    	 android:orientation="vertical">
	    	 
		    <ImageView
		        android:id="@+id/image_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_weight="2.28"
		        android:contentDescription="@string/text_content_description"
		        android:paddingBottom="10dp"
		        android:paddingTop="10dp"
		       	android:adjustViewBounds="true"/>
		     
		     <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_title" />
		     
		     <TextView
		         android:id="@+id/title_view"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"/>
		     
		     <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_price" />
		     
		     <TextView 
		         android:id="@+id/price_view"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"/>
		     
		     <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_description" />
		     
		     <TextView 
		         android:id="@+id/description_view"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"/>
		  </LinearLayout>
	  </ScrollView>
    
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@color/black"
          android:orientation="horizontal"
          android:paddingTop="5dp">
         
	    <Button
	        android:id="@+id/edit_button"
	        android:layout_width="106dp"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_button" 
	        android:onClick="onEdit"/>
	    
	      <Button
	        android:id="@+id/delete_button"
	        android:layout_width="106dp"
	        android:layout_height="wrap_content"
	        android:text="@string/delete_button" 
	        android:onClick="onDelete"/>
      
         <Button 
             android:id="@+id/back_button"
             android:text="@string/back_button"
             android:layout_width="106dp"
             android:layout_height="wrap_content"
             android:onClick="onBack"/>
         
       </LinearLayout>
    
</LinearLayout>